--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,33 @@
 alembic==1.5.7
 attrs==20.3.0
 bleach==3.2.1
-boto3==1.17.36
-botocore==1.20.36
 certifi==2020.12.5
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 docutils==0.16
+embedding-as-service-client==1.0.0
 Flask==1.1.2
 Flask-Migrate==2.7.0
 Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.14.3
 greenlet==1.0.0
 gunicorn==20.0.4
 idna==2.8
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
-jmespath==0.10.0
 joblib==1.0.1
 keyring==21.4.0
+lightgbm==3.2.0
 Mako==1.1.4
 MarkupSafe==1.1.1
-mysql-connector-python==8.0.23
 numpy==1.20.1
 oauthlib==3.1.0
 packaging==20.9
 pandas==1.2.3
 pkginfo==1.5.0.1
 pluggy==0.13.1
-protobuf==3.15.6
+psycopg2-binary==2.8.6
 py==1.10.0
 Pygments==2.7.1
 pyparsing==2.4.7
@@ -47,16 +44,16 @@ requests==2.21.0
 requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 rfc3986==1.4.0
-s3transfer==0.3.6
+scikit-learn==0.24.1
+scipy==1.6.1
 six==1.15.0
+sklearn==0.0
 SQLAlchemy==1.3.0
 threadpoolctl==2.1.0
 toml==0.10.2
 tqdm==4.50.1
-tweepy==3.10.0
 twine==3.2.0
-urllib3==1.26.4
+urllib3==1.24.3
 webencodings==0.5.1
 Werkzeug==1.0.1
-WTForms==2.3.3
 zmq==0.0.0
